@@ -2,68 +2,85 @@ package com.constructora.inventario.service;
 
 import com.constructora.inventario.model.CategoriaHerramienta;
 import com.constructora.inventario.repository.CategoriaHerramientaRepository;
+import jakarta.persistence.EntityNotFoundException;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.mockito.Mockito.*;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
-@SpringBootTest
+import org.junit.jupiter.api.extension.ExtendWith;
+
+@ExtendWith(MockitoExtension.class)
 public class CategoriaHerramientaServiceTest {
 
-    @Autowired
+    @InjectMocks
     private CategoriaHerramientaService categoriaHerramientaService;
 
-    @MockBean
+    @Mock
     private CategoriaHerramientaRepository categoriaHerramientaRepository;
 
-    @Test
-    public void testGuardar() {
-        CategoriaHerramienta categoria = new CategoriaHerramienta(null, "Eléctrica", "Bosch", 2);
+    private CategoriaHerramienta categoriaEjemplo;
 
-        when(categoriaHerramientaRepository.save(categoria)).thenReturn(
-                new CategoriaHerramienta(1L, "Eléctrica", "Bosch", 2)
-        );
-
-        CategoriaHerramienta guardada = categoriaHerramientaService.guardar(categoria);
-
-        assertNotNull(guardada);
-        assertEquals("Eléctrica", guardada.getTipo());
-        assertEquals("Bosch", guardada.getMarca());
-        assertEquals(2, guardada.getAnioAntiguedad());
+    @BeforeEach
+    void setUp() {
+        categoriaEjemplo = new CategoriaHerramienta(1L, "Eléctrica", "Bosch", 2);
     }
 
     @Test
-    public void testListar() {
-        when(categoriaHerramientaRepository.findAll()).thenReturn(
-                List.of(new CategoriaHerramienta(1L, "Manual", "Stanley", 5))
+    public void testGuardarCategoria() {
+        when(categoriaHerramientaRepository.save(any(CategoriaHerramienta.class))).thenReturn(categoriaEjemplo);
+
+        CategoriaHerramienta resultado = categoriaHerramientaService.guardar(categoriaEjemplo);
+
+        assertNotNull(resultado);
+        assertEquals("Eléctrica", resultado.getTipo());
+        verify(categoriaHerramientaRepository, times(1)).save(categoriaEjemplo);
+    }
+
+    @Test
+    public void testListarCategorias() {
+        List<CategoriaHerramienta> categorias = Arrays.asList(
+                categoriaEjemplo,
+                new CategoriaHerramienta(2L, "Manual", "Stanley", 5)
         );
 
-        List<CategoriaHerramienta> lista = categoriaHerramientaService.listar();
+        when(categoriaHerramientaRepository.findAll()).thenReturn(categorias);
 
-        assertNotNull(lista);
-        assertEquals(1, lista.size());
-        assertEquals("Manual", lista.get(0).getTipo());
+        List<CategoriaHerramienta> resultado = categoriaHerramientaService.listar();
+
+        assertEquals(2, resultado.size());
+        verify(categoriaHerramientaRepository, times(1)).findAll();
     }
 
     @Test
     public void testObtenerPorId() {
-        CategoriaHerramienta categoria = new CategoriaHerramienta(1L, "Industrial", "Makita", 3);
-        when(categoriaHerramientaRepository.findById(1L)).thenReturn(Optional.of(categoria));
+        when(categoriaHerramientaRepository.findById(1L)).thenReturn(Optional.of(categoriaEjemplo));
 
         CategoriaHerramienta resultado = categoriaHerramientaService.obtenerPorId(1L);
 
         assertNotNull(resultado);
-        assertEquals("Industrial", resultado.getTipo());
+        assertEquals(1L, resultado.getId());
     }
 
     @Test
-    public void testEliminar() {
+    public void testObtenerPorIdNotFound() {
+        when(categoriaHerramientaRepository.findById(99L)).thenReturn(Optional.empty());
+
+        assertThrows(EntityNotFoundException.class, () -> {
+            categoriaHerramientaService.obtenerPorId(99L);
+        });
+    }
+
+    @Test
+    public void testEliminarCategoria() {
         doNothing().when(categoriaHerramientaRepository).deleteById(1L);
 
         categoriaHerramientaService.eliminar(1L);
